--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1318,3 +1318,109 @@ console.log(5);
 
 ----
 
+## 8.26 猿辅导
+
+求所有数组中都出现的元素
+
+```js
+function solution() {
+    let m = parseInt(readline().trim());
+    let s1 = new Set();
+    let s2 = new Set();
+    for (let i = 0; i < m; i++){
+        let arr = readline().trim().split(" ").map(Number);
+        if (i === 0) {
+            arr.forEach((item) => {
+                s2.add(item);
+            });
+        } else {
+            let flag = false;
+            arr.forEach((item) => {
+                if (s2.has(item)) {
+                    s1.add(item);
+                    flag = true;
+                }
+            });
+            if (flag) {
+                //存在共同的
+                s2 = s1;
+                s1 = new Set();
+            } else {
+                // 不存在
+                s2 = new Set();
+                break;
+            }
+            
+        }
+    }
+    let ans = Array.from(s2).sort((a, b) => a - b);
+    if (ans.length > 0) {
+        console.log(ans.join(" "));
+    } else {
+        console.log("")
+    }
+    
+}
+
+
+let N = parseInt(readline().trim());
+while (N > 0) {
+    solution();
+    N--;
+}
+```
+
+
+
+计算二叉树的每一层的最大差值
+
+```
+
+```
+
+
+
+计算异或校验值
+
+```js
+function solution(n, start) {
+    if (n < 1) {
+        return 0;
+    }
+    let ans = BigInt(0);
+    for (let i = 0; i < n; i++) {
+        for (let j = 0; j < n - i; j++) {
+            ans ^= BigInt(start);
+            start += BigInt(1);
+        }
+        start += BigInt(i);
+    }
+    console.log(ans);
+}
+
+
+process.stdin.resume();
+process.stdin.setEncoding("utf-8");
+
+let str = "";
+
+process.stdin.on("data", (data) => {
+    str += data;
+});
+
+process.stdin.on("end", (_) => {
+    str = str.trim().split("\n").forEach((item) => {
+        let line = item.trim().split(" ").map(Number);
+        let n = line[0]
+        let start = line[1];
+        solution(n, start);
+    })
+})
+```
+
+
+
+
+
+----
+
