--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -3453,3 +3453,510 @@ module.exports = {
   1. 如果当前运算符的优先级≤\leq≤ops的最后一个，一直运算(例子：5*2+3，碰到+的时候计算5*2)
   2. 如果当前运算符的>>>ops的最后一个，将运算符push到ops(例子：5+2*3，碰到*的时候将`*`push到ops栈)
 
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ * 返回表达式的值
+ * @param s string字符串 待计算的表达式
+ * @return int整型
+ */
+function solve( s ) {
+    // write code here
+    s = s.replace(/\s/, "");
+    const nums = [];
+    const ops = [];
+    //设定运算符优先级
+    const m = new Map([["(", -1], ["+", 1], ["-", 1], ["*", 2]]);
+    
+    function calc() {
+        let right = nums.pop();
+        let left = nums.pop();
+        let sign = ops.pop();
+
+        switch(sign) {
+            case "+": 
+                nums.push(left + right);
+                break;
+            case "-":
+                nums.push(left - right);
+                break;
+            case "*":
+                nums.push(left * right);
+                break;
+            case "/":
+                nums.push(left / right);
+                break;
+        }
+    }
+    let i = 0;
+    let n = s.length;
+    while (i < n) {
+        if (/[0-9]/.test(s[i])) {
+            //处理数字
+            let value = 0;
+            while (/[0-9]/.test(s[i])) {
+                value = value * 10 + parseInt(s[i]);
+                i++;
+            }
+            nums.push(value);
+        } else if (s[i] === "(") {
+            // 遇到左括号进栈
+            ops.push(s[i]);
+            i++;
+        } else if (s[i] === ")") {
+            // 计算到最近一个左括号为止
+            while (ops[ops.length - 1] !== "(") {
+                calc();
+            }
+            ops.pop();  // 弹出左括号
+            i++;
+        } else {
+            // 运算符
+            if (ops.length === 0) {
+                // 栈为空时，遇到运算符直接进栈
+                ops.push(s[i]);
+            } else if (m.get(s[i]) > m.get(ops[ops.length - 1])) {
+                //当前运算符优先级高于之前的  5+2*3
+                ops.push(s[i]);
+            } else {
+                // 当前运算符优先级<=之前的  5*2-3
+                do {
+                    calc();
+                } while (m.get(s[i]) <= m.get(ops[ops.length - 1]));
+                ops.push(s[i]);
+            }
+            i++;
+        }
+    }
+    while (ops.length) {
+        calc();
+    }
+    return nums[0];
+}
+
+// let s = "(2*(3-4))*5";
+// console.log(solve(s));
+
+module.exports = {
+    solve : solve
+};
+```
+
+
+
+----
+
+## **BM50** **两数之和**
+
+给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 target  的那 两个 整数，并返回它们的数组下标。
+
+你可以假设每种输入只会对应一个答案。但是，数组中同一个元素在答案里不能重复出现。
+
+你可以按任意顺序返回答案。
+
+要求：空间复杂度 O(n)，时间复杂度 O(nlogn)
+
+
+
+#### 暴力枚举
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number[]}
+ */
+var twoSum = function(nums,target){
+			len_nums=nums.length;
+			for (let i=0; i<len_nums-1; i++){
+				for (let j=i+1; j<len_nums; j++){
+					if (nums[i]+nums[j]==target) {
+						var result=[i,j];
+						return result;
+					}
+				}
+			}
+		};
+```
+
+复杂度分析
+
+时间复杂度：O(N^2)O(N 2 )，其中 NN 是数组中的元素数量。最坏情况下数组中任意两个数都要被匹配一次。
+
+空间复杂度：O(1)O(1)。
+
+
+
+#### 哈希表
+
+注意到方法一的时间复杂度较高的原因是寻找 target - x 的时间复杂度过高。因此，我们需要一种更优秀的方法，能够快速寻找数组中是否存在目标元素。如果存在，我们需要找出它的索引。
+
+使用哈希表，可以将寻找 target - x 的时间复杂度降低到从 O(N)O(N) 降低到 O(1)O(1)。
+
+这样我们创建一个哈希表，对于每一个 x，我们首先查询哈希表中是否存在 target - x，然后将 x 插入到哈希表中，即可保证不会让 x 和自己匹配。
+
+```js
+/**
+  * 
+  * @param numbers int整型一维数组 
+  * @param target int整型 
+  * @return int整型一维数组
+  */
+function twoSum( numbers ,  target ) {
+    // write code here
+    const m = new Map();
+    const n = numbers.length;
+    for (let i = 0; i < n; i++) {
+        if (m.has(target - numbers[i])) {
+            return [m.get(target - numbers[i]), i];
+        }
+        m.set(numbers[i], i);
+    }
+}
+module.exports = {
+    twoSum : twoSum
+};
+```
+
+时间复杂度：O(N)O(N)，其中 NN 是数组中的元素数量。对于每一个元素 x，我们可以 O(1)O(1) 地寻找 target - x。
+
+空间复杂度：O(N)O(N)，其中 NN 是数组中的元素数量。主要为哈希表的开销。
+
+
+
+----
+
+## **BM51** **数组中出现次数超过一半的数字**
+
+#### 方法一：哈希表
+
+我们知道出现次数最多的元素大于Math.floor(n / 2)次，所以可以用哈希表来快速统计每个元素出现的次数。
+
+```js
+function MoreThanHalfNum_Solution(numbers)
+{
+    // write code here
+    let n = numbers.length;
+    const m = new Map();
+    let ans = 0;
+    for (let i = 0; i < n; i++) {
+        let item = numbers[i];
+        m.set(item, m.has(item) ? m.get(item) + 1 : 1);
+        ans = Math.max(ans, m.get(item));
+        if (ans > Math.floor(n / 2)) {
+            return item;
+        }
+    }
+}
+module.exports = {
+    MoreThanHalfNum_Solution : MoreThanHalfNum_Solution
+};
+```
+
+
+
+#### 排序
+
+如果将数组 nums 中的所有元素按照单调递增或单调递减的顺序排序，那么下标为Math.floor(n / 2) 的元素（下标从 0 开始）一定是众数。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var majorityElement = function(nums) {
+    nums.sort((a, b) => a - b);
+    return nums[nums.length >> 1];
+};
+
+```
+
+
+
+#### Boyer-Moore 投票算法
+
+如果我们把众数记为 +1+1，把其他数记为 -1−1，将它们全部加起来，显然和大于 `0`，从结果本身我们可以看出众数比其他数多。
+
+Boyer-Moore 算法的本质和方法四中的分治十分类似。我们首先给出 Boyer-Moore 算法的详细步骤：
+
+我们维护一个候选众数 candidate 和它出现的次数 count。初始时 candidate 可以为任意值，count 为 0；
+
+我们遍历数组 nums 中的所有元素，对于每个元素 x，在判断 x 之前，如果 count 的值为 0，我们先将 x 的值赋予 candidate，随后我们判断 x：
+
+如果 x 与 candidate 相等，那么计数器 count 的值增加 1；
+
+如果 x 与 candidate 不等，那么计数器 count 的值减少 1。
+
+在遍历完成后，candidate 即为整个数组的众数。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var majorityElement = function(nums) {
+    if (nums.length === 0) {
+        return false;
+    }
+    let count = 0;
+    let ans;
+    let n = nums.length;
+    for (let i = 0; i < n; i++) {
+        if (count === 0) {
+            ans = nums[i];
+            count++;
+        } else {
+            if (nums[i] === ans) {
+                count++;
+            } else {
+                count--;
+            }
+        }
+    }
+    return ans;
+};
+```
+
+
+
+----
+
+## **BM52** **数组中只出现一次的两个数字**
+
+一个整型数组 `nums` 里除两个数字之外，其他数字都出现了两次。请写程序找出这两个只出现一次的数字。要求时间复杂度是O(n)，空间复杂度是O(1)。
+
+
+
+**限制：**
+
+- `2 <= nums.length <= 10000`
+
+#### **分组异或**
+
+![数组中只出现一次的两个数字](E:\pogject\学习笔记\image\niuke\数组中只出现一次的两个数字.png)
+
+先对所有数字进行一次异或，得到两个出现一次的数字的异或值。
+
+在异或结果中找到任意为 1 的位。
+
+根据这一位对所有的数字进行分组。
+
+在每个组内进行异或操作，得到两个数字。
+
+
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[]}
+ */
+var singleNumbers = function(nums) {
+    let ret = 0;
+    const n = nums.length;
+    for (let i = 0; i < n; i++) {
+        ret ^= nums[i];
+    }
+    let div = 1;
+    while ((div & ret) === 0) {
+        // 找到第一个 二进制位 1
+        div <<= 1;
+    }
+    let a = 0, b = 0;
+    for (let i = 0; i < n; i++) {
+        if ((div & nums[i]) !== 0) {
+            a ^= nums[i];
+        } else {
+            b ^= nums[i];
+        }
+    }
+    return [a, b];
+};
+
+let nums = [4,1,4,6];
+console.log(singleNumbers(nums));
+```
+
+
+
+----
+
+## **BM53** **缺失的第一个正整数**
+
+给你一个未排序的整数数组 `nums` ，请你找出其中没有出现的最小的正整数。
+
+请你实现时间复杂度为 `O(n)` 并且只使用常数级别额外空间的解决方案。
+
+
+
+如果本题没有额外的时空复杂度要求，那么就很容易实现：
+
+我们可以将数组所有的数放入哈希表，随后从 11 开始依次枚举正整数，并判断其是否在哈希表中；
+
+我们可以从 11 开始依次枚举正整数，并遍历数组，判断其是否在数组中。
+
+如果数组的长度为 NN，那么第一种做法的时间复杂度为 O(N)O(N)，空间复杂度为 O(N)O(N)；第二种做法的时间复杂度为 O(N^2)O(N 
+2
+ )，空间复杂度为 O(1)O(1)。但它们都不满足时间复杂度为 O(N)O(N) 且空间复杂度为 O(1)O(1)。
+
+「真正」满足时间复杂度为 O(N)O(N) 且空间复杂度为 O(1)O(1) 的算法是不存在的，但是我们可以退而求其次：利用给定数组中的空间来存储一些状态。也就是说，如果题目给定的数组是不可修改的，那么就不存在满足时空复杂度要求的算法；但如果我们可以修改给定的数组，那么是存在满足要求的算法的。
+
+#### 数组模拟哈希表
+
+![缺失的第一个正整数](E:\pogject\学习笔记\image\niuke\缺失的第一个正整数.png)
+
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ *
+ * 
+ * @param nums int整型一维数组 
+ * @return int整型
+ */
+function minNumberDisappeared( nums ) {
+    // write code here
+    const n = nums.length;
+    for (let i = 0; i < n; i++) {
+        // 将非负正数变为  n + 1
+        if (nums[i] <= 0) {
+            nums[i] = n + 1;
+        }
+    }
+    for (let i = 0; i < n; i++) {
+        let num = Math.abs(nums[i]);
+        if (num <= n) {
+            // 将小于等于n的元素对应的位置变为负数
+            nums[num - 1] = - Math.abs(nums[num - 1]);
+        }
+    }
+    for (let i = 0; i < n; i++) {
+        // 返回第一个大于0的元素的下标 + 1
+        if (nums[i] > 0) {
+            return i + 1;
+        }
+    }
+    return n + 1;
+}
+module.exports = {
+    minNumberDisappeared : minNumberDisappeared
+};
+```
+
+**复杂度分析**
+
+- 时间复杂度：O(N)*O*(*N*)，其中 N*N* 是数组的长度。
+- 空间复杂度：O(1)*O*(1)。
+
+#### 置换
+
+除了打标记以外，我们还可以使用置换的方法，将给定的数组「恢复」成下面的形式：
+
+如果数组中包含 x \in [1, N]x∈[1,N]，那么恢复后，数组的第 x - 1x−1 个元素为 xx。
+
+在恢复后，数组应当有 [1, 2, ..., N] 的形式，但其中有若干个位置上的数是错误的，每一个错误的位置就代表了一个缺失的正数。以题目中的示例二 [3, 4, -1, 1] 为例，恢复后的数组应当为 [1, -1, 3, 4]，我们就可以知道缺失的数为 22。
+
+那么我们如何将数组进行恢复呢？我们可以对数组进行一次遍历，对于遍历到的数 x = \textit{nums}[i]x=nums[i]，如果 x \in [1, N]x∈[1,N]，我们就知道 xx 应当出现在数组中的 x - 1x−1 的位置，因此交换 \textit{nums}[i]nums[i] 和 \textit{nums}[x - 1]nums[x−1]，这样 xx 就出现在了正确的位置。在完成交换后，新的 \textit{nums}[i]nums[i] 可能还在 [1, N][1,N] 的范围内，我们需要继续进行交换操作，直到 x \notin [1, N]x∈  [1,N]。
+
+注意到上面的方法可能会陷入死循环。如果 \textit{nums}[i]nums[i] 恰好与 \textit{nums}[x - 1]nums[x−1] 相等，那么就会无限交换下去。此时我们有 \textit{nums}[i] = x = \textit{nums}[x - 1]nums[i]=x=nums[x−1]，说明 xx 已经出现在了正确的位置。因此我们可以跳出循环，开始遍历下一个数。
+
+由于每次的交换操作都会使得某一个数交换到正确的位置，因此交换的次数最多为 NN，整个方法的时间复杂度为 O(N)O(N)。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var firstMissingPositive = function(nums) {
+	const n = nums.length;
+	for (let i = 0; i < n; i++) {
+		while (nums[i] > 0 && nums[i] <= n && nums[nums[i] - 1] !== nums[i]) {
+			// 把1-n的元素放到对应的位置
+			let temp = nums[nums[i] - 1];
+			nums[nums[i] - 1] = nums[i];
+			nums[i] = temp;
+		}
+	}
+
+	for (let i = 0; i < n; i++) {
+		if (nums[i] !== i + 1) {
+			return i + 1;
+		}
+	}
+	return n + 1;
+};
+
+let nums = [3,4,-1,1];
+console.log(firstMissingPositive(nums));
+```
+
+
+
+
+
+----
+
+## **BM54** **三数之和**
+
+给你一个包含 n 个整数的数组 nums，判断 nums 中是否存在三个元素 a，b，c ，使得 a + b + c = 0 ？请你找出所有和为 0 且不重复的三元组。
+
+注意：答案中不可以包含重复的三元组。
+
+####  排序 + 双指针
+
+```js
+/**
+ * 
+ * @param num int整型一维数组 
+ * @return int整型二维数组
+ */
+function threeSum( nums ) {
+    nums = nums.sort((a, b) => a - b);  //排序
+    let n = nums.length;
+    const ans = [];
+    let sum = 0;
+    //枚举第一个数字
+    for (let first = 0; first < n; first++){
+        // 需要和上一次枚举的数不相同
+        if (nums[first] > 0) {
+            //first元素大于0后，后面sum不可能等于0
+            break;
+        }
+        if (first > 0 && nums[first] === nums[first - 1]){
+            continue;
+        }
+        //第三个数对应的指针初始指向数组的最右端
+        let third = n - 1;
+        let target = -nums[first];
+        for (let second = first + 1; second < n; second++){
+            if (nums[second] > target) {
+                //前两个元素和已经大于0，则再加第三个一定大于0;
+                break;
+            }
+            // 需要和上一次枚举的数不相同
+            if (second > first + 1 && nums[second] === nums[second - 1]) {
+                continue;
+            }
+            // 需要保证 second 的指针在 third 的指针的左侧
+            while(second < third && nums[second] + nums[third] > target){
+                third--;
+            }
+            // 如果指针重合，随着 second 后续的增加
+            // 就不会有满足 a+b+c = 0 并且 b<c 的 c 了，可以退出循环
+            if (second === third) {
+                break;
+            }
+            if (nums[second] + nums[third] === target) {
+                ans.push([nums[first], nums[second], nums[third]]);
+            }
+        }
+    }
+    return ans;
+}
+module.exports  =  {
+    threeSum : threeSum
+};
+```
+
+
+
+----
+
