--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -2740,6 +2740,81 @@ console.log(result);
 
 
 ---
+## 41. 缺失的第一个正数
+
+给你一个未排序的整数数组 `nums` ，请你找出其中没有出现的最小的正整数。
+
+请你实现时间复杂度为 `O(n)` 并且只使用常数级别额外空间的解决方案。
+
+**数组模拟hash**
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var firstMissingPositive = function(nums) {
+    const n = nums.length;
+    for (let i = 0; i < n; i++) {
+        // 将非负正数变为  n + 1
+        if (nums[i] <= 0) {
+            nums[i] = n + 1;
+        }
+    }
+    for (let i = 0; i < n; i++) {
+        let num = Math.abs(nums[i]);
+        if (num <= n) {
+            // 将小于等于n的元素对应的位置变为负数
+            nums[num - 1] = - Math.abs(nums[num - 1]);
+        }
+    }
+    for (let i = 0; i < n; i++) {
+        // 返回第一个大于0的元素的下标 + 1
+        if (nums[i] > 0) {
+            return i + 1;
+        }
+    }
+    return n + 1;
+};
+
+let nums = [3,4,-1,1];
+console.log(firstMissingPositive(nums));
+```
+
+**置换元素位置**
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var firstMissingPositive = function(nums) {
+	const n = nums.length;
+	for (let i = 0; i < n; i++) {
+		while (nums[i] > 0 && nums[i] <= n && nums[nums[i] - 1] !== nums[i]) {
+			// 把1-n的元素放到对应的位置
+			let temp = nums[nums[i] - 1];
+			nums[nums[i] - 1] = nums[i];
+			nums[i] = temp;
+		}
+	}
+
+	for (let i = 0; i < n; i++) {
+		if (nums[i] !== i + 1) {
+			return i + 1;
+		}
+	}
+	return n + 1;
+};
+
+let nums = [3,4,-1,1];
+console.log(firstMissingPositive(nums));
+```
+
+
+
+----
+
 ## 42. 接雨水
 
 给定 `n` 个非负整数表示每个宽度为 `1` 的柱子的高度图，计算按此排列的柱子，下雨之后能接多少雨水。
