--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -2923,6 +2923,92 @@ console.log(trap(height));
 
 
 
+----
+
+## 46. 全排列
+
+给定一个不含重复数字的数组 `nums` ，返回其 *所有可能的全排列* 。你可以 **按任意顺序** 返回答案。
+
+**回溯**
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[][]}
+ */
+var permute = function(nums) {
+	const n = nums.length;
+	const ans = [];
+	const backtrack = (first) => {
+		// 所有数都填完了
+		if (first === n) {
+			ans.push([...nums]);
+		}
+		for (let i = first; i < n; i++) {
+			// 动态维护数组
+			[nums[first], nums[i]] = [nums[i], nums[first]];
+			// 继续递归填下一个数
+			backtrack(first + 1);
+			// 撤销操作
+			[nums[i], nums[first]] = [nums[first], nums[i]];
+		}
+	}
+	backtrack(0);
+
+	return ans;
+};
+
+let nums = [3,4,-1,1];
+console.log(permute(nums));
+```
+
+
+
+----
+
+## 47. 全排列 II
+
+给定一个可包含重复数字的序列 `nums` ，***按任意顺序*** 返回所有不重复的全排列。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[][]}
+ */
+var permuteUnique = function(nums) {
+	nums.sort((a, b) => a -b);  // 排序
+	const n = nums.length;
+	const ans = [];
+	const visited = new Array(n).fill(false);
+
+	const backtrack = (idx, perm) => {
+		// 所有数都填完了
+		if (idx === n) {
+			ans.push([...perm]);
+			return;
+		}
+		for (let i = 0; i < n; i++) {
+			if (visited[i] || (i > 0 && nums[i] === nums[i -1] && !visited[i - 1])) {
+				continue;
+			}
+			perm.push(nums[i]);
+			visited[i] = true;
+			// 继续递归填下一个数
+			backtrack(idx + 1, perm);
+			// 撤销操作
+			visited[i] = false;
+			perm.pop();
+		}
+	}
+	backtrack(0, []);
+
+	return ans;
+};
+
+let nums = [3,4,1,1];
+console.log(permute(nums));
+```
+
 
 
 ----
