--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -3960,3 +3960,102 @@ module.exports  =  {
 
 ----
 
+## **BM55** **没有重复项数字的全排列**
+
+给定一个不含重复数字的数组 `nums` ，返回其 *所有可能的全排列* 。你可以 **按任意顺序** 返回答案。
+
+
+
+回溯法：一种通过探索所有可能的候选解来找出所有的解的算法。如果候选解被确认不是一个解（或者至少不是最后一个解），回溯算法会通过在上一步进行一些变化抛弃该解，即回溯并且再次尝试。
+
+#### 回溯
+
+![没有重复项数字的全排列](E:\pogject\学习笔记\image\niuke\没有重复项数字的全排列.png)
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[][]}
+ */
+var permute = function(nums) {
+	const n = nums.length;
+	const ans = [];
+	const backtrack = (first) => {
+		// 所有数都填完了
+		if (first === n) {
+			ans.push([...nums]);
+		}
+		for (let i = first; i < n; i++) {
+			// 动态维护数组
+			[nums[first], nums[i]] = [nums[i], nums[first]];
+			// 继续递归填下一个数
+			backtrack(first + 1);
+			// 撤销操作
+			[nums[i], nums[first]] = [nums[first], nums[i]];
+		}
+	}
+	backtrack(0);
+
+	return ans;
+};
+
+let nums = [3,4,-1,1];
+console.log(permute(nums));
+```
+
+
+
+
+
+----
+
+## **BM56** **有重复项数字的全排列**
+
+给定一个可包含重复数字的序列 `nums` ，***按任意顺序*** 返回所有不重复的全排列。
+
+#### 排序后回溯
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[][]}
+ */
+var permuteUnique = function(nums) {
+	nums.sort((a, b) => a -b);  // 排序
+	const n = nums.length;
+	const ans = [];
+	const visited = new Array(n).fill(false);
+
+	const backtrack = (idx, perm) => {
+		// 所有数都填完了
+		if (idx === n) {
+			ans.push([...perm]);
+			return;
+		}
+		for (let i = 0; i < n; i++) {
+			if (visited[i] || (i > 0 && nums[i] === nums[i -1] && !visited[i - 1])) {
+				continue;
+			}
+			perm.push(nums[i]);
+			visited[i] = true;
+			// 继续递归填下一个数
+			backtrack(idx + 1, perm);
+			// 撤销操作
+			visited[i] = false;
+			perm.pop();
+		}
+	}
+	backtrack(0, []);
+
+	return ans;
+};
+
+let nums = [3,4,1,1];
+console.log(permute(nums));
+```
+
+
+
+----
+
+## **BM57** **岛屿数量**
