--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1424,3 +1424,255 @@ process.stdin.on("end", (_) => {
 
 ----
 
+## 8.27360笔试
+
+```js
+var arr = [, , , , ,]
+
+console.log(arr.length, arr);  // 5 [ <5 empty items> ]
+```
+
+
+
+判断写在纸上的大写英文字符串翻面后是否对称
+
+```js
+
+let m = parseInt(read_line().trim());
+while (m > 0) {
+    m--;
+    let line = read_line().trim().split(" ");
+    console.log(solution(line));
+}
+
+function solution(s) {
+  if (s.length === 0) {
+    return "NO";
+  }
+  const alphaSet = new Set(["A","H","I","M","O","T","U","V","W","X","Y"]);
+  let left = 0;
+  let right = s.length - 1;
+  while(left <= right) {
+    if (!alphaSet.has(s[left]) || s[left] !== s[right]) {
+      return "NO";
+    }
+    left++;
+    right--;
+  }
+  return "YES";
+}
+
+// console.log(solution("AHH"))
+while ((line = read_line()) != '') {
+  let str = line.trim();
+  console.log(solution(str))
+}
+
+```
+
+
+
+判断英语句子结构
+
+```js
+let line1 = read_line().trim().split(" ").map(Number);
+// const [n1, n2, n3] = line1;
+
+const words1 = new Set(read_line().trim().split(" "));
+const words2 = new Set(read_line().trim().split(" "));
+const words3 = new Set(read_line().trim().split(" "));
+
+function solution(setence) {
+    if (setence.length < 2) {
+        return "NO";
+    }
+    const n = setence.length;
+    let i = 0;
+    if (!words1.has(setence[i])) {
+        //如果第一个单词不是主语
+        return "NO";
+    }
+    i++;
+    while (words1.has(setence[i]) && i < n) {
+        //遍历剩余主语
+        i++;
+    }
+    if (i >= n || !words2.has(setence[i])) {
+        // 没有谓语
+        return "NO";
+    }
+    i++;
+    // 谓语只能一个
+    while(i < n ) {
+        //遍历宾语
+        if (!words3.has(setence[i])) {
+            return "NO";
+        }
+        i++;
+    }
+    return "YES";
+}
+```
+
+
+
+-----
+
+## 8.27 京东笔试
+
+转换字符串
+
+```js
+function solution(str, n, k) {
+  for (let i = 0; i < n; i++) {
+    if (i < k) {
+      str[i] = str[i].toUpperCase();
+    } else {
+      str[i] = str[i].toLowerCase();
+    }
+  }
+  return str.join("");
+}
+
+let [n, k] = readline().trim().split(" ").map(Number);
+let line2 = readline().trim().split("");
+console.log(solution(line2, n, k));
+
+
+
+
+
+```
+
+输出矩阵
+
+```js
+function solution(n) {
+  let start = 1;
+  for (let i = 0; i < n; i++) {
+    let arr = [];
+    for (let j = 0; j < n; j++) {
+      if (i % 2 === 0) {
+        arr.push(start);
+      } else {
+        arr.unshift(start)
+      }
+      start++;
+    }
+    console.log(arr.join(" "));
+  }
+}
+
+let n = parseInt(readline());
+// let n = 4;
+solution(n);
+```
+
+
+
+构造长城，变换最少次数
+
+```js
+function solution(arr, n) {
+    if (n < 3) {
+        return 0;
+    }
+    // let oddCountMax = 1, evenCountMax = 1;
+    let oddMaxCountValue = arr[0], evenMaxCountValue = arr[1];
+    const oddMap = new Map();
+    oddMap.set(arr[0], 1);
+    let odds = [[arr[0]], []]
+    let evens = [[arr[1]], []]
+    const evenMap = new Map();
+    evenMap.set(arr[1], 1);
+
+    for (let i = 0; i < n; i++) {
+        let item = arr[i];
+        if (i % 2 === 0) {
+            oddMap.set(item, oddMap.has(item) ? oddMap.get(item) + 1 : 1);
+            if (oddMap.get(item) > oddMap.get(oddMaxCountValue)) {
+                oddMaxCountValue = item;
+                odds[1] = odds[0];
+                odds[0] = [item];
+            }
+            if (oddMap.get(item) === oddMap.get(oddMaxCountValue)) {
+                odds[0].push(item);
+            }
+
+        } else {
+            evenMap.set(item, evenMap.has(item) ? evenMap.get(item) + 1 : 1);
+            if (evenMap.get(item) > evenMap.get(evenMaxCountValue)) {
+                evenMaxCountValue = item;
+                evens[1] = evens[0];
+                evens[0] = [item];
+            }
+            if (evenMap.get(item) > evenMap.get(evenMaxCountValue)) {
+                evens[0].push(item);
+            }
+        }
+    }
+    if (oddMaxCountValue !== evenMaxCountValue) {
+        return n - oddMap.get(oddMaxCountValue) - evenMap.get(evenMaxCountValue);
+    } else {
+        let secondEven = evenMaxCountValue, secondOdd = oddMaxCountValue;
+        if (evens[0].length > 1) {
+            secondEven =evens[0][1];
+        } else {
+            if (evens[1].length > 0) {
+                secondEven = evens[1][0];
+            }
+        }
+        if (odds[0].length > 1) {
+            secondOdd =odds[0][1];
+        } else {
+            if (odds[1].length > 0) {
+                secondOdd = odds[1][0];
+            }
+        }
+
+        let ans1 = oddMap.get(oddMaxCountValue) + evenMap.get(secondEven);
+        let ans2 = oddMap.get(secondOdd) + evenMap.get(evenMaxCountValue);
+
+        return n - Math.max(ans1, ans2);
+    }
+}
+
+let m = parseInt(readline());
+let line1 = readline().trim().split(" ").map(Number);
+
+console.log(solution(line1, m));
+```
+
+
+
+给定一个长度为n的数组，每次可以使某个数+1或-1，目标数组的要求为对任意一个数，其左右两个数相等，问至少进行几次操作
+
+```js
+function (nums, n) {
+	let evenMax = 0;
+	let oddMax = 0；
+	for (let i = 0; i < n; ++i) {
+			let num = nums[i]
+      if (i % 2 === 0) {
+      	evenMax = evenMax > num ? evenMax : num;
+      } else {
+      	oddMax = oddMax > num ? oddMax : num;
+      }
+  }
+
+  let res = 0
+  for (let i = 0; i < n; ++i) {
+      if (i % 2 === 0) {
+          res += (evenMax - nums[i]);
+      }
+      else {
+          res += (oddMax - nums[i]);
+      }
+  }
+  if (evenMax == oddMax){
+  	res += (n / 2);
+  }
+  return ans;
+}
+```
+
