--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -4059,3 +4059,382 @@ console.log(permute(nums));
 ----
 
 ## **BM57** **岛屿数量**
+
+给你一个由 '1'（陆地）和 '0'（水）组成的的二维网格，请你计算网格中岛屿的数量。
+
+岛屿总是被水包围，并且每座岛屿只能由水平方向和/或竖直方向上相邻的陆地连接形成。
+
+此外，你可以假设该网格的四条边均被水包围。
+
+提示：
+
+- m == grid.length
+
+- n == grid[i].length
+- 1 <= m, n <= 300
+- grid[i][j] 的值为 '0' 或 '1'
+
+#### 深度优先搜索
+
+我们可以将二维网格看成一个无向图，竖直或水平相邻的 11 之间有边相连。
+
+为了求出岛屿的数量，我们可以扫描整个二维网格。如果一个位置为 11，则以其为起始节点开始进行深度优先搜索。在深度优先搜索的过程中，每个搜索到的 11 都会被重新标记为 00。
+
+最终岛屿的数量就是我们进行深度优先搜索的次数。
+
+```js
+/**
+ * @param {character[][]} grid
+ * @return {number}
+ */
+var numIslands = function(grid) {
+	if (grid === null || grid.length === 0 || grid[0].length === 0) {
+		return 0;
+	}
+	const m = grid.length;
+	const n = grid[0].length;
+	let ans = 0;
+	for (let row = 0; row < m; row++) {
+		for (let col = 0; col < n; col++) {
+			if (grid[row][col] === "1") {
+				ans++;
+				dfs(grid, row, col, m, n);
+			}
+		}
+	}
+	return ans;
+};
+
+const dfs = (grid, row, col, m, n) => {
+	if (row >= 0 && row < m && col >= 0 && col < n && grid[row][col] === "1") {
+		grid[row][col] = "0";
+		dfs(grid, row - 1, col, m, n);
+		dfs(grid, row + 1, col, m, n);
+		dfs(grid, row, col - 1, m, n);
+		dfs(grid, row, col + 1, m, n);
+	}
+}
+
+let grid = [
+  ["1","1","1","1","0"],
+  ["1","1","0","1","0"],
+  ["1","1","0","0","0"],
+  ["0","0","0","0","0"]
+];
+
+console.log(numIslands(grid));
+```
+
+复杂度分析
+
+时间复杂度：O(MN)O(MN)，其中 MM 和 NN 分别为行数和列数。
+
+空间复杂度：O(MN)O(MN)，在最坏情况下，整个网格均为陆地，深度优先搜索的深度达到 M NMN。
+
+
+
+#### 广度优先搜索
+
+同样地，我们也可以使用广度优先搜索代替深度优先搜索。
+
+为了求出岛屿的数量，我们可以扫描整个二维网格。如果一个位置为 11，则将其加入队列，开始进行广度优先搜索。在广度优先搜索的过程中，每个搜索到的 11 都会被重新标记为 00。直到队列为空，搜索结束。
+
+最终岛屿的数量就是我们进行广度优先搜索的次数。
+
+```js
+/**
+ * @param {character[][]} grid
+ * @return {number}
+ */
+var numIslands = function(grid) {
+	if (grid === null || grid.length === 0 || grid[0].length === 0) {
+		return 0;
+	}
+	const m = grid.length;
+	const n = grid[0].length;
+	let neighbors = [];
+	let ans = 0;
+
+	for (let row = 0; row < m; row++) {
+		for (let col = 0; col < n; col++) {
+			if (grid[row][col] === "1") {
+				ans++;
+				grid[row][col] = "0";  //做标记，避免重复遍历
+				neighbors.push([row, col]);  // 加入队列
+				turnZero(grid, neighbors, m, n);
+			}
+		}
+	}
+	return ans;
+};
+
+const turnZero = (grid, neighbors, m, n) => {
+	const dirs = [[0, 1], [1, 0], [0, -1], [-1, 0]];
+	while (neighbors.length > 0) {
+		// 当队列中还有元素的时候 
+		const cur = neighbors.shift();  //取出队首元素
+		for (let dir of dirs) {
+			const row = cur[0] + dir[0];
+			const col = cur[1] + dir[1];
+			if (row >= 0 && row < m && col >= 0 && col < n && grid[row][col] === "1") {
+				//检查坐标合法性
+				grid[row][col] = "0";  //沉没陆地
+				neighbors.push([row, col]);  //四周的节点加入队列
+			}
+		}
+	}
+}
+
+let grid = [
+  ["1","1","1","1","0"],
+  ["1","1","0","1","0"],
+  ["1","1","0","0","0"],
+  ["0","0","0","0","0"]
+];
+
+console.log(numIslands(grid));
+```
+
+复杂度分析
+
+时间复杂度：O(MN)O(MN)，其中 MM 和 NN 分别为行数和列数。
+
+空间复杂度：O(\min(M, N))O(min(M,N))，在最坏情况下，整个网格均为陆地，队列的大小可以达到 \min(M, N)min(M,N)。
+
+
+
+#### 并查集
+
+同样地，我们也可以使用并查集代替搜索。
+
+为了求出岛屿的数量，我们可以扫描整个二维网格。如果一个位置为 11，则将其与相邻四个方向上的 11 在并查集中进行合并。
+
+最终岛屿的数量就是并查集中连通分量的数目。
+
+```js
+class UnionFind {
+    constructor(n) { //构造一个节点数为n的集合
+        this.count = n //并查集总数
+        this.parent = new Array(n)
+        this.size = new Array(n)  // size数组记录着每棵树的重量
+        for (let i = 0; i < n; i++) {
+            this.parent[i] = i; // 自己是自己的parent
+            this.size[i] = 1;	//每个集合上节点的数量
+        }
+    }
+
+    union(p, q) { //连通结点p和结点q, p和q都是索引
+        let rootP = this.find(p);
+        let rootQ = this.find(q);
+        if (rootP === rootQ) return
+        // 元素数量小的接到数量多的下面，这样比较平衡
+        if (this.size[rootP] > this.size[rootQ]) {
+            this.parent[rootQ] = rootP;
+            this.size[rootP] += this.size[rootQ];
+        } else {
+            this.parent[rootP] = rootQ;
+            this.size[rootQ] += this.size[rootP];
+        }
+        this.count--;
+    }
+
+    isConnected(p, q) { //判断p,q是否连通
+        return this.find(p) === this.find(q)
+    }
+
+    find(x) { //找到x结点的root
+        while (this.parent[x] != x) {
+            // 进行路径压缩
+            this.parent[x] = this.parent[this.parent[x]];
+            x = this.parent[x];
+        }
+        return x;
+    }
+
+    getCount() { //返回子集个数
+        return this.count;
+    }
+
+}
+
+var numIslands = function (grid) {
+    let m = grid.length
+    if (m === 0) return 0
+    let n = grid[0].length
+    const dummy = -1
+    const dirs = [[1, 0], [0, 1]]//方向数组 向右 向下
+    const uf = new UnionFind(m * n)
+    for (let x = 0; x < m; x++) {
+        for (let y = 0; y < n; y++)
+            if (grid[x][y] === '0') {//如果网格是0，则和dummy合并
+                uf.union(n * x + y, dummy) 
+            }
+            else if (grid[x][y] === '1') {//如果网格是1，则向右 向下尝试
+                for (let d of dirs) {
+                    let r = x + d[0]
+                    let c = y + d[1]
+                    if (r >= m || c >= n) continue //坐标合法性
+                    if (grid[r][c] === '1') { //当前网格的右边 下面如果是1，则和当前网格合并
+                        uf.union(n * x + y, n * r + c)
+                    }
+                }
+            }
+    }
+    return uf.getCount()  //返回并查集的个数减一就行
+};
+
+
+let grid = [
+  ["1","1","1","1","0"],
+  ["1","1","0","1","0"],
+  ["1","1","0","0","0"],
+  ["0","0","0","0","0"]
+];
+
+console.log(numIslands(grid));
+```
+
+复杂度分析
+
+时间复杂度：O(MN \times \alpha(MN))O(MN×α(MN))，其中 MM 和 NN 分别为行数和列数。注意当使用路径压缩（见 find 函数）和按秩合并（见数组 rank）实现并查集时，单次操作的时间复杂度为 \alpha(MN)α(MN)，其中 \alpha(x)α(x) 为反阿克曼函数，当自变量 xx 的值在人类可观测的范围内（宇宙中粒子的数量）时，函数 \alpha(x)α(x) 的值不会超过 55，因此也可以看成是常数时间复杂度。
+
+空间复杂度：O(MN)O(MN)，这是并查集需要使用的空间。
+
+
+
+----
+
+## **BM58** **字符串的排列**
+
+输入一个字符串，打印出该字符串中字符的所有排列。
+
+ 你可以以任意顺序返回这个字符串数组，但里面不能有重复元素。
+
+#### 回溯
+
+但是该递归函数并没有满足「全排列不重复」的要求，在重复的字符较多的情况下，该递归函数会生成大量重复的排列。对于任意一个空位，如果存在重复的字符，该递归函数会将它们重复填上去并继续尝试导致最后答案的重复。
+
+解决该问题的一种较为直观的思路是，我们首先生成所有的排列，然后进行去重。而另一种思路是我们通过修改递归函数，使得该递归函数只会生成不重复的序列。
+
+具体地，我们只要在递归函数中设定一个规则，保证在填每一个空位的时候重复字符只会被填入一次。具体地，我们首先对原字符串排序，保证相同的字符都相邻，在递归函数中，我们限制每次填入的字符一定是这个字符所在重复字符集合中从左往右第一个未被填入的字符。
+
+```js
+var permutation = function(s) {
+    const n = s.length;
+    const ans = [];
+    const visited = new Array(n).fill(false);
+
+    const arr = Array.from(s).sort();  //首先对原字符串排序，保证相同的字符都相邻
+    const perm = [];
+
+    const backtrack = (arr, i, n, perm) => {
+        if (i === n) {
+            ans.push(perm.join(""));
+            return;
+        }
+        for (let j = 0; j < n; j++) {
+            if (visited[j] || (j > 0 && !visited[j - 1] && arr[j - 1] === arr[j])) {
+                continue;  // 避免重复
+            }
+            visited[j] = true;
+            perm.push(arr[j]);
+            backtrack(arr, i + 1, n, perm);
+            perm.pop();
+            visited[j] = false;
+        }
+    }
+    backtrack(arr, 0, n, perm);
+    const size = ans.length;
+    return ans;
+}
+
+let s = "abc";
+console.log(permutation(s))
+```
+
+复杂度分析
+
+时间复杂度：O(n \times n!)O(n×n!)，其中 nn 为给定字符串的长度。这些字符的全部排列有 O(n!)O(n!) 个，每个排列平均需要 O(n)O(n) 的时间来生成。
+
+空间复杂度：O(n)O(n)。我们需要 O(n)O(n) 的栈空间进行回溯，注意返回值不计入空间复杂度。
+
+#### 下一个排列
+
+具体地，我们首先对给定的字符串中的字符进行排序，即可得到当前字符串的第一个排列，然后我们不断地计算当前字符串的字典序中下一个更大的排列，直到不存在更大的排列为止即可。
+
+这个方案的优秀之处在于，我们得到的所有排列都不可能重复，这样我们就无需进行去重的操作。同时因为无需使用回溯法，没有栈的开销，算法时间复杂度的常数较小。
+
+
+
+```js
+var permutation = function(s) {
+    const ret = [];
+    const arr = Array.from(s).sort();
+
+    const nextPermutation = (arr) => {
+        let i = arr.length - 2;
+        while (i >= 0 && arr[i] >= arr[i + 1]) {
+            i--;
+        }
+        if (i < 0) {
+            return false;
+        }
+        let j = arr.length - 1;
+        while (j >= 0 && arr[i] >= arr[j]) {
+            j--;
+        }
+        swap(arr, i, j);
+        reverse(arr, i + 1);
+        return true;
+    }
+
+    const swap = (arr, i, j) => {
+        const temp = arr[i];
+        arr[i] = arr[j];
+        arr[j] = temp;
+    }
+
+    const reverse = (arr, start) => {
+        let left = start, right = arr.length - 1;
+        while (left < right) {
+            swap(arr, left, right);
+            left++;
+            right--;
+        }
+    }
+
+    do {
+        ret.push(arr.join(''));
+    } while (nextPermutation(arr));
+    const size = ret.length;
+    const retArr = new Array(size).fill(0);
+    for (let i = 0; i < size; i++) {
+        retArr[i] = ret[i];
+    }
+    return retArr;
+};
+```
+
+
+
+-----
+
+## **BM59** **N皇后问题**
+
+按照国际象棋的规则，皇后可以攻击与之处在同一行或同一列或同一斜线上的棋子。
+
+n 皇后问题 研究的是如何将 n 个皇后放置在 n×n 的棋盘上，并且使皇后彼此之间不能相互攻击。
+
+给你一个整数 n ，返回所有不同的 n 皇后问题 的解决方案。
+
+每一种解法包含一个不同的 n 皇后问题 的棋子放置方案，该方案中 'Q' 和 '.' 分别代表了皇后和空位。
+
+
+数据范围: 1≤*n*≤9
+
+要求：空间复杂度 O(1)*O*(1) ，时间复杂度 O(n!)*O*(*n*!)
+
+
+
+#### 基于集合的回溯
+
