--- a/面试学习题目/前端面试_17_浏览器部分.md
+++ b/面试学习题目/前端面试_17_浏览器部分.md
@@ -610,6 +610,8 @@ d、ISP的DNS服务器：ISP有专门的DNS服务器应对DNS查询请求
 
 e、根服务器：ISP的DNS服务器找不到，就要向根服务器发出请求，进行递归查询
 
+
+
 **（2）、浏览器发送请求与服务器交互**
 
 a、浏览器**利用tcp协议**通过三次握手与服务器建立连接
@@ -619,6 +621,8 @@ b、浏览器根据解析到的IP地址和端口号发起http请求。http请求
 c、服务器接收到http请求之后，开始搜索html页面，并使用http返回响应报文
 
 d、若状态码为200显示响应成功，浏览器接收到返回的HTML页面后，开始渲染页面，304去读取缓存是否可用
+
+
 
 **（3）、浏览器对接收到的HTML页面进行渲染**
 
@@ -699,7 +703,7 @@ e、遍历Render树并调用硬件API绘制所有节点（重绘）
 
 遇到外部CSS文件和图片等静态资源时，浏览器会另外发送一个异步请求
 
-遇到js文件时，HTML文件会挂起渲染的进程，等待js文件加载完毕后，再继续进行渲染，因为js可能会修改DOM，导致后续HTML资源白白加载，这也是为什么建议将js文件写在底部body标签前
+遇到js文件时，HTML文件会挂起渲染的进程，等待js文件加载完毕后，再继续进行渲染，**因为js可能会修改DOM**，导致后续HTML资源白白加载，这也是为什么建议将js文件写在底部body标签前
 
 
 
