--- a/面试学习题目/前端面试_4_ES6部分.md
+++ b/面试学习题目/前端面试_4_ES6部分.md
@@ -3776,7 +3776,7 @@ Promise
 
 Promise 有个缺点就是一旦创建就无法取消，所以**本质上 Promise 是无法被终止的**，但我们在开发过程中可能会遇到下面两个需求：
 
-- 中断调用链
+- **中断调用链**
 
 就是在某个 then/catch 执行之后，不想让后续的链式调用继续执行了。
 
@@ -3791,7 +3791,7 @@ somePromise
   .finally(() => console.log('finally'))
 ```
 
-一种方法是在then中直接抛错, 这样就不会执行后面的then, 直接跳到catch方法打印err(但此方法并没有实际中断)。但如果链路中对错误进行了捕获，后面的then函数还是会继续执行。
+**一种方法是在then中直接抛错, 这样就不会执行后面的then, 直接跳到catch方法打印err**(但此方法并没有实际中断)。但如果链路中对错误进行了捕获，后面的then函数还是会继续执行。
 
 Promise的then方法接收两个参数：
 
@@ -3799,14 +3799,15 @@ Promise的then方法接收两个参数：
 Promise.prototype.then(onFulfilled, onRejected)
 ```
 
-若onFulfilled或onRejected是一个函数，当函数返回一个新Promise对象时，原Promise对象的状态将跟新对象保持一致，详见Promises/A+标准。
+若onFulfilled或onRejected是一个函数，当函数返回一个新Promise对象时**，原Promise对象的状态将跟新对象保持一致**，详见Promises/A+标准。
 
 因此，**当新对象保持“pending”状态时，原Promise链将会中止执行。**
 
 ```js
 Promise.resolve().then(() => {
-    console.log('then 1')
+    console.log('then 1')  // then 1
     return new Promise(() => {})
+    //后面的不会执行
 }).then(() => {
     console.log('then 2')
 }).then(() => {
@@ -3816,7 +3817,7 @@ Promise.resolve().then(() => {
 })
 ```
 
-- 中断Promise
+- **中断Promise**
 
 注意这里是中断而不是终止，**因为 Promise 无法终止**，这个中断的意思是：**在合适的时候，把 pending 状态的 promise 给 reject 掉**。例如一个常见的应用场景就是希望给网络请求设置超时时间，**一旦超时就就中断，我们这里用定时器模拟一个网络请求，随机 3 秒之内返回。**
 
