--- a/面试学习题目/前端面试_16_前端安全部分.md
+++ b/面试学习题目/前端面试_16_前端安全部分.md
@@ -38,7 +38,7 @@
 
 跨域本质是浏览器基于**同源策略**的一种安全手段
 
-受浏览器同源策略的限制，非同源的两个URL间不能通信，非同源的脚本不能操作其他源下面的对象，但在实际开发场景中， 这种情况。经常出现， 此时**需要通过跨域进行非同源通信**。
+受浏览器同源策略的限制，**非同源的两个URL间不能通信**，非同源的脚本不能操作其他源下面的对象，但在实际开发场景中， 这种情况。经常出现， 此时**需要通过跨域进行非同源通信**。
 
 > 一定要注意**跨域是浏览器的限制**，你用抓包工具抓取接口数据，是可以看到接口已经把数据返回回来了，只是浏览器的限制，你获取不到数据。用postman请求接口能够请求到数据。这些再次印证了跨域是浏览器的限制。
 
