--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1684,3 +1684,54 @@ function (nums, n) {
 }
 ```
 
+
+
+
+
+----
+
+## 8.29美团面试
+
+
+
+登录如何做的，登录的时候数据是否要加密，
+
+token如何生成，token放在哪里发送给客户端
+
+服务端如何验证token
+
+
+
+vuex如何使用，优势
+
+可以不用vuex处理吗
+
+
+
+http状态码
+
+如何排查状态码原因
+
+
+
+http缓存
+
+强缓存和协商缓存分别应用于什么场景
+
+
+
+使用promise实现delay(3).then(dosomething)
+
+```js
+/**
+ * 定义延时函数
+ * delaytime 延时时长，单位毫秒
+ */
+var sleep = (delaytime = 1000) => {
+  return new Promise(resolve => setTimeout(resolve, delaytime))
+}
+
+```
+
+
+
