--- a/面试学习题目/重难点内容/智力题.md
+++ b/面试学习题目/重难点内容/智力题.md
@@ -197,3 +197,438 @@
 
 ----
 
+## 连续自然数之和为1000的共有几组？（m，n都为自然数，单独1个数也算作“连续自然数”）
+
+```
+连续整数是从n到m，这串整数之和的通项公式为S=(n+m)(m-n+1)/2，这里S=1000。
+
+所以有：（n+m)(m-n+1) = 2000 = 2^4 * 5^3
+
+假设两个乘数都为偶数，则其和也为偶数，即 (m+n)+(n-m+1) = 2m+1 为偶数，显然是不成立的，而两个奇数相乘一定为奇数，所以两个乘数肯定为一奇一偶。
+
+假设i为5的指数，i的可选值有0,1,2,3。
+
+i=0,奇数=1，偶数=2000，n+m=2000, m-n+1=1,得m=n=1000
+i=1,奇数=5，偶数=400，n+m=400, m-n+1=5,m=203,n=197
+i=2,奇数=25，偶数=80，n+m=80, m-n+1=25 ,m=53,n=27
+i=3,奇数=125，偶数=160，n+m=16, m-n+1=125 ,m=71,n=54
+所以一共有4组
+```
+
+
+
+---
+
+## 猴子搬香蕉问题
+
+一个小猴子有100根香蕉，它要走过50米才能到家，每次它最多搬50根香蕉，而且每走1米就要吃掉一根香蕉，请问它最多能把多少根香蕉搬到家里？
+
+```
+把问题简化成走最短的路，背更多的水果。但路和水果之间有限制。
+
+题目已经限制,猴子最多背50,我们计算其消耗仅剩下50根的米处。
+
+假设猴子第一次背了50根,走了X米,在回来搬第2个50根,就有:
+
+100-3X —— 剩下的香蕉数(先走X,往反2X)
+50-X —— 剩下的米处
+问题就明白了:
+
+(100-3X)-(50-X)=50-2X —— 回到家时的香蕉数
+问题就简化为在条件: (100-3X)<=50的情况下,求(50-2X)的最大值。
+
+得到: X=17时, 50-2X 的最大值是 16
+
+所以是16根
+```
+
+
+
+---
+
+## 修改水果框标签问题
+
+有三框水果，有一筐全是苹果，一筐全是橘子，还有一筐是两种水果的混合。
+
+三框都分别标记了“苹果”“橘子”“混合”，但是标签全是错的，即标签是什么里面就一定不是那框水果。
+
+你的任务是如何只把手伸进一个框子中，只拿出一个水果，然后准确的把三框水果的标签改正确。
+
+```
+把手伸进标记为混合的框子里。因为都是错的，所以标记为混合的框里肯定装的只是一种水果，那么拿出是什么水果，就是应该标记什么水果。
+
+之后剩下两个框子，你已经确认的框中是什么水果，那么对应的标记框子内的水果是混合的，剩下一个就是另一种水果的。
+```
+
+
+
+----
+
+## 盲人分袜子
+
+有两位盲人，他们都各自买了两对黑袜和两对白袜，八对袜子的布质、大小完全相同，而每对袜子都有一张商标纸连着。两位盲人不小心将八对袜子混在一起。他们每人怎样才能取回黑袜和白袜各两对呢？
+
+```
+每拿一对袜子，就把袜子拆开，一人一只。到最后肯定是两个人都平均分到了黑袜子和白袜子。
+```
+
+
+
+----
+
+##  拿苹果问题
+
+桌上有100个苹果，你和另一个人一起拿，一人一次，每次拿的数量大于等于1小于等于5，问：如何拿能保证最后一个苹果由你来拿？
+
+```
+分析：如果要保证拿最后一个，那么就得保证拿到第94个，以此类推，要拿第94个，就要保证拿到第88个、82、76、70...最后只要保证你拿到第四个就行了。
+
+答案：只需要你先拿，第一次拿4个，以后看对方拿的个数，根据对方拿的个数，保证每轮对方和你拿的加起来是6就行了，其实就是保证你拿到4，还要拿到10,16...直到94
+```
+
+
+
+----
+
+## 握手问题
+
+有5对夫妇举行家庭聚会。每一个人都可能和其他人握手，但夫妇之间绝对不握手。
+
+聚会结束时，A先生问大家握手几次，结果是每个人的握手次数都不相同，那么请问A先生的太太握手几次？
+
+```
+A先生的太太握了4次手。
+
+首先，分析题目：每一个人都可能和其他人握手, 但夫妇之间绝对不握手。
+
+可得出每个人最多握八次手（除自己和亲爱的）
+
+甲先生问各握了几次手时得到的回答是：
+
+0,1,2,3,4,5,6,7,8
+
+解析如下：
+
+回答握了8次的说明TA除了自己亲爱的以外，和每个人都握手了。所以TA和回答握手次数为0的那个人是一家人。
+
+因为8君和除了0君外的人都握手了，所以1君的那一次握手肯定是和8君。7君握了七次手，没和0君、1君握，因为每人最多握8次手且0君是8君的爱人，则可得出7君和1君是一家人。
+
+因为8君和除了0君外的人都握手了，7君和除0君、1君外的人都握手了，所以2君的两次握手应该分别是和7君、8君。6君握了6次手，没和0君、1君、2君握手，因为每人最多握8次手且0君是8君的爱人、1君是7君的爱人，所以2君和6君是一家人。
+
+因为8君和除了0君外的人都握手了，7君和除0君、1君外的人都握手了，6君和除0君、1君、2君外的人都握手了，所以3君的三次握手应该分别是和6君、7君、8君握的。5君握了5次手，没和0君、1君、2君、3君握，因为每人最多握8次手且0君是8君的爱人、1君是7君的爱人、2君是6君的爱人，所以3君和5君是一家人。
+
+由上可得，4君即为甲太太，也就是说甲太太握了4次手.
+
+那甲太太分别是和谁握的呢？
+
+当然是5、6、7、8君啦~
+```
+
+
+
+-----
+
+##  盲人翻牌
+
+给一个盲人52张扑克牌，并告诉他里面恰好有10张牌是正面朝上的。要求这个瞎子把牌分成两堆，使得每堆牌里正面朝上的牌的张数一样多。瞎子应该怎么做？
+
+```
+把扑克牌分成两堆，一堆10张，一堆42张。然后，把小的那一堆里的所有牌全部翻过来。
+
+解析：设42张中有x张正面朝上，则10张里面有10-x张正面朝上，这时将10张全部翻过来，两堆牌里都有x张正面朝上
+```
+
+
+
+-----
+
+## 一百个囚犯和一盏灯
+
+国王招来100个囚犯，对他们说：你们犯的是死罪，但我给你们一次求生的机会。15分钟以后，你们将被关进一个有100间隔离牢房的监狱里，每人一间牢房，都与外界隔绝，什么也听不见看不到，连时间都没法计算，无法获得外界的任何信息。
+
+这所监狱有一个院子，每天只少随机（注意是完全随机）打开一间牢房的门，让一个囚犯到院子里来放风。院子里有一盏灯，放风的囚犯可以控制它的开关，将它打开或是关闭。除囚犯之外，其他人都不会去碰开关。这盏灯会永远有充足的能源供应，灯泡和电路不会出故障。
+
+除了开关这盏灯，放风的囚犯放风时留下的任何其它痕迹都会在夜晚被清除干净（包括在灯上作的任何记号）。牢房是完全封闭的，院子里的灯光在牢房里看不到。只有放风到院子里的人才能看到。
+
+国王：好了现在我向你们提出一个要求，只要你们做到了，就可以全部获得释放：
+
+给你们15分钟商量你们的方案。15分钟以后，你们将被关进我刚才说的那个监狱，永远无法再交流，被关若干天后，你们中间如果任何一个人能够向我证明你们每个人都至少放风了一次，我就把你们放了，不然永远别想再出来。
+
+如果你们有谁现在可以告诉我这个方法，也就是能够证明你们每人至少放风一次的方法，我就放掉你们！
+
+其中一个囚犯想了几分钟，回答了这个问题，国王听后，如自己所说的把他们全部给放了。请问那个囚犯是用什么方法证明的？
+
+```
+100个囚犯商量选出一个囚犯作为计数员，普通囚犯每次出去，如果自己没有打开过灯，并且灯是灭的，则打开灯；其它情况均不操作。计数员每次出去，如果灯是亮的就自己计数一次，并把灯关掉，其它情况什么也不干。一直到计数员计数到100，则全部囚犯都出去过至少打过一次灯。
+
+再来细化化下每个角色的职责：
+
+计数员： 如果灯亮，计数一次，并关灯。如果灯灭，啥事不干。
+普通囚犯：如果自己没有开关灯，并且现在灯灭，就打开灯；如果自己以前开过灯或现在灯亮，则什么也不做。
+灯：能开、能关
+```
+
+
+
+----
+
+## 64匹马，8个赛道，找出最快的4匹马，要比赛多少轮？
+
+首先把64匹马分成8组，跑8次。每一组都会得到8匹的相对速度，也就是在同一组内的名次。
+
+![img](https://i.loli.net/2021/08/25/JtWjOQL2UDMrEVI.png)
+
+为了方便描述，我们用编号来表示。如A组里面的名次分别用来表示。
+
+![img](https://i.loli.net/2021/08/25/bB2svSrgLxEWwXz.png)
+
+因为我们只需要找出最快的4匹，那么肯定不属于最快的4匹，同理把每一组的后4名先排除。
+
+![img](https://i.loli.net/2021/08/25/9Vj3pSnhH5Q82mq.png)
+
+现在每一组内都有相对名次，但不同的组间是不知道的。如果把A组和B组放一起，下面的情况都可能存在。
+
+![img](https://i.loli.net/2021/08/25/ZGLuaMKvgjAe29S.png)
+
+因为是要找最快的，所以选择每组的第一名再出来跑一次，这样落后的第一名所在的整组都可以排除。为了描述方便，把最快到最慢的第一名所在的组依次重新命名为A，B...H组。
+
+![img](https://i.loli.net/2021/08/25/rgVQsYCO9yo8P3i.png)
+
+组间的第一名有了名次关系，可以发现一定不属于前4名，因为都在他们前面。同理可排除。同时是最快的，一定属于前4。那接下来只需在剩下的9匹中找出前3。
+
+![img](https://i.loli.net/2021/08/25/jIxaUTHmnlyfD3w.png)
+
+除去A3，其余8匹跑一次。如果A2在第3名或者更后，那说明已经选出了前3名，也不用再跑了，否则再取前3和A3一起跑一次，即可得结果。
+
+![img](https://i.loli.net/2021/08/25/r5uyWwgtc3CApms.png)
+
+最多11次一定可以选出最快的4匹。
+
+-----
+
+## 砝码称重问题（三）
+
+现在有质量分别为1g、2g、3g、4g、8g的砝码各一枚.用这些砝码在天平上共可称出多少种不同的质量?
+
+```
+1g-18g都可以称出来，也就是18种
+
+1=1
+2=2
+3=3
+4=4
+5=1+4
+6=2+4
+7=3+7
+8=8
+9=1+8
+10=2+8
+11=3+8
+12=4+8
+13=1+4+8
+14=2+4+8
+15=3+4+8
+16=1+3+4+8
+17=2+3+4+8
+18=1+2+3+4+8
+```
+
+
+
+----
+
+##  砝码称重问题（二）
+
+假设有280g食盐，有一架天平，有两个砝码，分别是14g、4g。
+
+请问能否在3次内将280g食盐分为100g和180g两堆，请详细描述你的解决方法。
+
+
+
+### 解法一
+
+ ```
+  - 第一次：平分280g的食盐：140g、140g
+  
+  目前重物：食盐：140g、140g，砝码：4g、14g
+  
+  - 第二次：平分140g的食盐：70g、70g
+  
+  目前重物：食盐：70g、70g、140g，砝码：4g、14g
+  
+  我们再需要称出30g的食盐
+  
+  如何根据上面的重物利用天平称出30g的食盐
+  
+  称了两次两个砝码还都没有用，同时14-4=10，所有两个砝码分布放在天平的两侧
+  
+  - 第三次：天平左侧：4g砝码 + 40g食盐，天平右侧：14g砝码+ 30g食盐
+  
+  目前重物：食盐：30g、40g、70g、140g，砝码：4g、14g
+  
+  食盐重量可组合成100g、180g
+ ```
+
+### 解法二
+
+ ```
+    - 第一次：4g砝码+280g食盐+天平，可以分成食盐：142g、138g
+    
+    目前重物：食盐：138g、142g，砝码：4g、14g
+    
+    - 第二次：14g砝码+142g食盐+天平，称出食盐14g
+    
+    目前重物：食盐：14g、128g、138g，砝码：4g、14g
+    
+    - 第三次：天平左侧：14g食盐+14g砝码 ，天平右侧：28g食盐
+    
+    目前重物：食盐：14g、28g、100g、138g，砝码：4g、14g
+    
+    食盐重量可组合成100g、180g
+ ```
+
+​    
+
+### 解法三
+
+```
+    - 第一次：用14克砝码得出14克盐。
+    
+    目前重物：食盐：14g、266g
+    
+    - 第二次:用14克砝码和4克砝码把266克盐分为128克盐和138克盐。
+    
+    目前重物：食盐：14g、28g、138g、266g
+    
+    - 第三次:14克砝码和14克盐从128克盐中得到28克盐，剩下100克盐。
+    
+    得到180克和100克两堆食盐.
+```
+
+​    
+
+-----
+
+##  砝码称重问题（一）
+
+如何制造个数最少的单位砝码，如 1g，2g，3g，4g……，使得这些单位砝码能称出1g到100g之间的任何整数克的物体？
+
+```
+最直观的感受是直接使用1,2,4,8......，64 。也就是2^0,2^1,2^2......2^6，一共7个砝码，因为任何数字都可以表示成二进制数，比如100用二进制表示就是：1100100，所以使用2^2,2^5,2^6三个砝码即可。任何数字都可以表示为二进制数，在这里就意味着任何重量都可以用上述2^n砝码表示。
+
+但这是最少数量的砝码吗？
+
+这要视情况而定，如果只能在天平的一边放砝码，另一边放物品，这就是最少的方案。因为对于砝码而言只有两种状态：放与不放，对于n个砝码，可能出现的总体状态有2^n种状态，要表示100个数据则要保证2^n>=100，得最小的n=7，意思就是说不管什么砝码方案，至少都要7个砝码。而前面我们猜想的方案正好是7个砝码，正好是理论推导出的最少砝码个数，不会比这个数目更少了，所以是一个最少的方案。
+
+如果允许天平两边都放砝码，也就是说物品可以和砝码放在一边，上述2^n砝码方案就不是最少的方案了。
+
+因为砝码有三种状态：不放、放左边和放右边。
+
+对于n个砝码，可能出现的总体状态有3^n种状态，要表示100个数据则要保证3^n>=100,的最小的n=5，意思就是说不管什么砝码方案，至少都要5个砝码。
+
+接下来我们尝试一下能不能找到5个砝码的方案。
+
+任意一个数都可以表示成三进制的数，比如100用三进制表示就是10201，通过减法，我们又可以把任意一个三进制数化成只有0和1的形式，比如将10201化成10201=11001-100。而且减数与被减数相同位上的数字必然不会同时为1，假如化成减法形式后相同位同时为1，比如110-10，两个数的十位上都为1，结果必然是100，没有2，所以不用化简，矛盾。
+
+综上，3^0,3^1,3^2......3^4一共5个砝码一定可以表示出从1到3^0+3^1+3^2+...+3^4=121的所有数（注:不是3^5-1）
+```
+
+
+
+
+
+----
+
+##  绳子计时问题
+
+有若干根相同的不均匀的绳子，烧完一根绳子的时间是1小时，问如何计时1小时15分钟？
+
+```
+把第一根绳子两头同时点燃，同时把第二根绳子点燃一头。
+
+当第一根绳子烧完时，时间为半个小时。
+
+这时把第二根绳子的另一头也点燃，开始计时，当第二根绳子烧完时，停止计时，那么这段时间就是15分钟。
+
+也就是说，只需要3根绳子就可以计时一个小时15分钟。
+```
+
+
+
+----
+
+## 小白鼠试毒问题进阶
+
+有16瓶水，其中只有一瓶水有毒，小白鼠喝一滴之后一小时会死。 请问最少用多少只小白鼠，在1小时内一定可以找出至少14瓶无毒的水？
+
+答案为**3只**。
+
+```
+具体步骤
+将16瓶水两瓶为一组，组号标为A1-A8，三只小白鼠分别标号为b1、b2、b3。
+
+A1,001，只让b1喝
+A2,010，只让b2喝
+A3,011，让b1、b2喝
+A4,100，只让b3喝
+A5,101，b1、b3喝
+A6,110，b2、b3喝
+A7,111，让b1、b2、b3喝
+A8组不喝.
+
+结果
+如果只有b1死了，b2、b3都活着，那么有毒的水在A1组里，剩下的14瓶无毒；
+如果只有b2死了，b1、b3都活着，则A2组有毒；
+如果b1、b2死，b3活，则A3组有毒；
+如果只有b3死了，b1、b2都活着，则A4组有毒；
+如果b1、b3死，b2活，则A5有毒；
+如果b2、b3死，b1活，则A6有毒；
+如果三只全死，A7组有毒；
+如果三只全活，A8有毒。
+```
+
+
+
+---
+
+##  药丸难题
+
+医生给了病人两种药丸，每种两颗，两种药丸的成分不同，但外观一样，医生要求早上和晚上，每种药各吃一颗。现在药丸被混在了一起，难以分辨。如果病人没按照规定吃药或者不吃药，就会死亡。请问他要怎么做才能活下来？
+
+```
+把所有的4颗药丸都切开成相等的两半，然后早上和晚上，分别吃掉每颗药丸的一半。
+```
+
+
+
+----
+
+## 球的重量
+
+有8个球，其中1个比另外的要略重。在不用砝码的前提下，你最少要称几次，才能找出这个球？
+
+```
+最少称两次。
+
+把所有的球分成三组，其中两组每组3个球，另一组2个球；首先，将3个球的两组进行称重，
+
+如果其中一组比较重，从这组球当中任选两个，再次称重
+如果轻重不等，重的球就是你要找的。
+如果轻重相等，剩下那个球就是你要找的。
+如果第一次称重时两组球一样重，那么就把剩下一组的两个球进行称重，就能得到答案
+```
+
+
+
+----
+
+5L桶和7L桶，无限水，怎么样能获取4L水？
+
+```
+5	7
+
+0 	7
+5	2
+
+```
+
