--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -4846,3 +4846,553 @@ console.log(longestIncreasingPath(matrix));
 ----
 
 ## **BM62** **斐波那契数列**
+
+斐波那契数 （通常用 F(n) 表示）形成的序列称为 斐波那契数列 。该数列由 0 和 1 开始，后面的每一项数字都是前面两项数字的和。也就是：
+
+```
+F(0) = 0，F(1) = 1
+F(n) = F(n - 1) + F(n - 2)，其中 n > 1
+```
+
+给定 n ，请计算 F(n) 。
+
+要求：空间复杂度 O(1)*O*(1)，时间复杂度 O(n)*O*(*n*) ，本题也有时间复杂度 O(logn)*O*(*l**o**g**n*) 的解法
+
+```js
+var fib = function(n) {
+    if (n < 2) {
+        return 1;
+    }
+    let p = 1, q = 1, r = 1;
+    for (let i = 3; i <= n; i++) {
+        p = q;
+        q = r;
+        r = p + q;
+    }
+    return r;
+};
+
+```
+
+
+
+----
+
+## **BM63** **跳台阶**
+
+一只青蛙一次可以跳上1级台阶，也可以跳上2级台阶。求该青蛙跳上一个 `n` 级的台阶总共有多少种跳法。
+
+要求：时间复杂度：O(n)*O*(*n*) ，空间复杂度： O(1)*O*(1)
+
+```js
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var numWays = function(n) {
+    const MOD = 1000000007;
+    if (n < 2) {
+        return 1;
+    }
+    let p = 1, q = 1, r = 0;
+    for (let i = 2; i <= n; i++) {
+        r = (p + q) % MOD;
+        p = q;
+        q = r;
+    }
+    return r;
+}
+```
+
+
+
+----
+
+## **BM64** **最小花费爬楼梯**
+
+给你一个整数数组 cost ，其中 cost[i] 是从楼梯第 i 个台阶向上爬需要支付的费用。一旦你支付此费用，即可选择向上爬一个或者两个台阶。
+
+你可以选择从下标为 0 或下标为 1 的台阶开始爬楼梯。
+
+请你计算并返回达到楼梯顶部的最低花费。
+
+![使用最小花费爬楼梯](E:\pogject\学习笔记\image\niuke\使用最小花费爬楼梯.png)
+
+```js
+/**
+ * @param {number[]} cost
+ * @return {number}
+ */
+var minCostClimbingStairs = function(cost) {
+    const n = cost.length;
+    const dp = new Array(n + 1).fill(0);
+
+    for (let i = 2; i <= n; i++) {
+    	dp[i] = Math.min(dp[i - 1] + cost[i - 1], dp[i - 2] + cost[i - 2]);
+    }
+    return dp[n];
+};
+
+let cost = [1,100,1,1,1,100,1,1,100,1];
+console.log(minCostClimbingStairs(cost));
+```
+
+将空间复杂度优化到 O(1)。
+
+```js
+/**
+ * @param {number[]} cost
+ * @return {number}
+ */
+var minCostClimbingStairs = function(cost) {
+    const n = cost.length;
+    const dp = new Array(n + 1).fill(0);
+
+    let pre = 0, curr = 0, next = 0;
+    for (let i = 2; i <= n; i++) {
+    	next = Math.min(curr + cost[i - 1], pre + cost[i - 2]);
+    	pre = curr;
+    	curr = next;
+    }
+    return curr;
+};
+
+let cost = [1,100,1,1,1,100,1,1,100,1];
+console.log(minCostClimbingStairs(cost));
+```
+
+
+
+----
+
+## **BM65** **最长公共子序列(二)**
+
+给定两个字符串 text1 和 text2，返回这两个字符串的最长 公共子序列 的长度。如果不存在 公共子序列 ，返回 0 。
+
+一个字符串的 子序列 是指这样一个新的字符串：它是由原字符串在不改变字符的相对顺序的情况下删除某些字符（也可以不删除任何字符）后组成的新字符串。
+
+例如，"ace" 是 "abcde" 的子序列，但 "aec" 不是 "abcde" 的子序列。
+两个字符串的 公共子序列 是这两个字符串所共同拥有的子序列。
+
+![最长公共子序列](E:\pogject\学习笔记\image\niuke\最长公共子序列.png)
+
+```js
+var longestCommonSubsequence = function(text1, text2) {
+    const m = text1.length, n = text2.length;
+    const dp = new Array(m + 1).fill(0).map(() => new Array(n + 1).fill(0));
+    for (let i = 1; i <= m; i++) {
+        const c1 = text1[i - 1];
+        for (let j = 1; j <= n; j++) {
+            const c2 = text2[j - 1];
+            if (c1 === c2) {
+                dp[i][j] = dp[i - 1][j - 1] + 1;
+            } else {
+                dp[i][j] = Math.max(dp[i - 1][j], dp[i][j - 1]);
+            }
+        }
+    }
+    return dp[m][n];
+};
+```
+
+给定两个字符串str1和str2，**输出两个字符串的最长公共子序列**。如果最长公共子序列为空，则返回"-1"。目前给出的数据，仅仅会存在一个最长的公共子序列
+
+```js
+/**
+ * longest common subsequence
+ * @param s1 string字符串 the string
+ * @param s2 string字符串 the string
+ * @return string字符串
+ */
+function LCS( s1 ,  s2 ) {
+    // write code here
+ 		const m = s1.length, n = s2.length;
+    const dp = new Array(m + 1).fill(0).map(() => new Array(n + 1).fill(0));
+
+    for (let i = 1; i <= m; i++) {
+        const c1 = s1[i - 1];
+        for (let j = 1; j <= n; j++) {
+            const c2 = s2[j - 1];
+            if (c1 === c2) {
+                dp[i][j] = dp[i - 1][j - 1] + 1;
+            } else {
+                dp[i][j] = Math.max(dp[i - 1][j], dp[i][j - 1]);
+            }
+        }
+    }
+    if (dp[m][n] === 0) {
+    	return "-1";
+    }
+
+    const ans = [];
+    let row = m, col = n;
+    while(dp[row][col] >= 1) {
+    	if (s1[row - 1] === s2[col - 1]) {
+    		ans.push(s1[row - 1]);
+    		row--;
+    		col--;
+    	} else if (dp[row - 1][col] >= dp[row][col - 1]) {
+    		row--;
+    	} else {
+    		col--;
+    	}
+    }
+    return ans.reverse().join("");
+};
+
+let s1 = "1A2C3D4B56", s2 = "B1D23A456A";
+console.log(LCS(s1, s2));
+```
+
+
+
+-----
+
+## **BM66** **最长公共子串**
+
+给定两个字符串str1和str2,输出两个字符串的最长公共子串
+
+题目保证str1和str2的最长公共子串存在且唯一。 
+
+数据范围： 1 ≤∣*str*1∣,∣*str*2∣≤5000
+要求： 空间复杂度 O(n^2)*O*(*n*2)，时间复杂度 O(n^2)*O*(*n*2)
+
+```
+输入：
+"1AB2345CD","12345EF"
+
+返回值：
+"2345"
+```
+
+这里的dp含义和上一次不一样了，最长公共子序列的dp[i][j]表示str1的i位置和st2的j位置截止的最大长度，
+
+而最长公共字串的dp[i][j]表示str1的i位置和str2的j位置作为最后一个元素所构成的最长公共字串，也就是str1的第i个位置必须作为公共子串的最后一个元素，在dp的过程中用index记录最大字串长度的最后一个元素下标
+
+```js
+/**
+ * longest common subsequence
+ * @param s1 string字符串 the string
+ * @param s2 string字符串 the string
+ * @return string字符串
+ */
+function LCS( s1 ,  s2 ) {
+    // write code here
+ 		const m = s1.length, n = s2.length;
+    const dp = new Array(m + 1).fill(0).map(() => new Array(n + 1).fill(0));
+    let maxLength = 0;  //最大字串长度
+	  let index;  //i记录max最大时候的坐标，用于确定子串
+
+	  for (let i = 0; i < n; i++) {
+	  	dp[0][i] = (s1[0] === s2[i]) ? 1 : 0;
+	  }
+	  for (let i = 0; i < m; i++) {
+	  	dp[i][i] = (s1[i] === s2[0]) ? 1 : 0;
+	  }
+
+    for (let i = 1; i <= m; i++) {
+        for (let j = 1; j <= n; j++) {
+            if (s1[i] === s2[j]) {
+                dp[i][j] = dp[i - 1][j - 1] + 1;
+                if (maxLength < dp[i][j]) {
+                	maxLength = dp[i][j];
+                	index = i;
+                }
+            } else {
+                dp[i][j] = 0;
+            }
+        }
+    }
+    if (dp[m][n] === 0) {
+    	return "-1";
+    }
+
+    return s1.slice(index - maxLength + 1, index + 1);
+};
+
+let s1 = "1A2C3D4B56", s2 = "B1D23A456A";
+console.log(LCS(s1, s2));
+```
+
+
+
+-----
+
+## **BM67** **不同路径的数目(一)**
+
+一个机器人位于一个 m x n 网格的左上角 （起始点在下图中标记为 “Start” ）。
+
+机器人每次只能向下或者向右移动一步。机器人试图达到网格的右下角（在下图中标记为 “Finish” ）。
+
+问总共有多少条不同的路径？
+
+#### 动态规划
+
+![不同路径的数目](E:\pogject\学习笔记\image\niuke\不同路径的数目.png)
+
+```js
+/**
+ * @param {number} m
+ * @param {number} n
+ * @return {number}
+ */
+var uniquePaths = function(m, n) {
+    // const dirs = [[1, 0], [0, 1]];
+    const dp = new Array(m).fill(0).map(() => new Array(n).fill(0));
+
+    for (let i = 0; i < m; i++) {
+        dp[i][0] = 1;
+    }
+    for (let i = 0; i < n; i++) {
+        dp[0][i] = 1;
+    }
+
+    for (let i = 1; i < m; i++) {
+        for (let j = 1; j < n; j++) {
+            dp[i][j] = dp[i - 1][j] + dp[i][j - 1];
+        }
+    }
+    return dp[m - 1][n - 1];
+};
+
+console.log(uniquePaths(3, 7))
+```
+
+我们可以使用滚动数组代替代码中的二维数组，使空间复杂度降低为O(n)
+
+#### 组合数学
+
+![不同路径的数目组合数学](E:\pogject\学习笔记\image\niuke\不同路径的数目组合数学.png)
+
+```js
+var uniquePaths = function(m, n) {
+    let ans = 1;
+    for (let x = n, y = 1; y < m; ++x, ++y) {
+        ans = Math.floor(ans * x / y);
+    }
+    return ans;
+};
+```
+
+
+
+----
+
+## **BM68** **矩阵的最小路径和**
+
+给定一个包含非负整数的 `*m* x *n*` 网格 `grid` ，请找出一条从左上角到右下角的路径，使得路径上的数字总和为最小。
+
+**说明：**每次只能向下或者向右移动一步。
+
+
+
+#### 动态规划
+
+```js
+/**
+ * @param {number[][]} grid
+ * @return {number}
+ */
+var minPathSum = function(grid) {
+    const m = grid.length, n = grid[0].length;
+    const dp = new Array(m).fill(0).map(() => new Array(n).fill(0));
+    dp[0][0] = grid[0][0];
+
+    for (let i = 1; i < m; i++) {
+        dp[i][0] = dp[i - 1][0] + grid[i][0];
+    }
+    for (let i = 1; i < n; i++) {
+        dp[0][i] = dp[0][i - 1] + grid[0][i];
+    }
+
+    for (let i = 1; i < m; i++) {
+        for (let j = 1; j < n; j++) {
+            dp[i][j] = Math.min(dp[i - 1][j], dp[i][j - 1]) + grid[i][j];
+        }
+    }
+    return dp[m - 1][n - 1];
+};
+
+let grid = [[1,3,1],[1,5,1],[4,2,1]];
+console.log(minPathSum(grid));
+```
+
+空间复杂度可以优化，例如每次只存储上一行的dp 值，则可以将空间复杂度优化到 O(n)。
+
+```js
+/**
+ * @param {number[][]} grid
+ * @return {number}
+ */
+var minPathSum = function(grid) {
+    const m = grid.length, n = grid[0].length;
+    const dp = new Array(n).fill(0);
+    dp[0] = grid[0][0];
+
+    for (let i = 1; i < n; i++) {
+        dp[i] = dp[i - 1] + grid[0][i];
+    }
+
+    for (let i = 1; i < m; i++) {
+        dp[0] = dp[0] + grid[i][0];
+        for (let j = 1; j < n; j++) {
+            dp[j] = Math.min(dp[j - 1], dp[j]) + grid[i][j];
+        }
+    }
+    return dp[n - 1];
+};
+
+let grid = [[1,3,1],[1,5,1],[4,2,1]];
+console.log(minPathSum(grid));
+```
+
+
+
+----
+
+## **BM69** **把数字翻译成字符串**
+
+给定一个数字，我们按照如下规则把它翻译为字符串：0 翻译成 “a” ，1 翻译成 “b”，……，11 翻译成 “l”，……，25 翻译成 “z”。一个数字可能有多个翻译。请编程实现一个函数，用来计算一个数字有多少种不同的翻译方法。
+
+#### 动态规划
+
+```js
+/**
+ * @param {number} num
+ * @return {number}
+ */
+var translateNum = function(num) {
+    num = num.toString();
+    let p = 0, q = 0, r = 1;
+    let n = num.length;
+    for (let i = 0; i < n; i++) {
+        p = q;
+        q = r;
+        r = q;
+        if (i === 0) {
+            continue;
+        }
+        let pre = num.substring(i - 1, i + 1);
+        if (num[i - 1] !== "0" && Number(pre) < 26 && Number(pre) >= 0) {
+            r += p;
+        }
+    }
+    return r;
+};
+
+let num = 12258;
+console.log(translateNum(num));
+```
+
+
+
+有一种将字母编码成数字的方式：'a'->1, 'b->2', ... , 'z->26'。
+
+我们把一个字符串编码成一串数字，再考虑逆向编译成字符串。
+
+由于没有分隔符，数字编码成字母可能有多种编译结果，例如 11 既可以看做是两个 'a' 也可以看做是一个 'k' 。但 10 只可能是 'j' ，因为 0 不能编译成任何结果。
+
+现在给一串数字，返回有多少种可能的译码结果
+
+```js
+/**
+ * @param {number} num
+ * @return {number}
+ */
+var translateNum = function(num) {
+    num = num.toString();
+    const n = num.length;
+    if (n === 0 || num[0] === "0") {
+        return 0;
+    }
+
+    let p = 0, q = 0, r = 1;
+    const dp = new Array(n).fill(1);
+
+    if (num[1] !== "0" && Number(num[0] + num[1]) <= 26) {
+        dp[1] = 2;
+    }
+
+    for (let i = 2; i < n; i++) {
+        if (num[i] === "0") {
+            if (num[i - 1] === "0") {
+                // 连续两个0，或者0前面的数大于2则无法解码0的部分
+                return 0;
+            } else if (num[i - 1] <= '2') {
+                //对应10和20的情况
+                dp[i] = dp[i - 2];
+            } else {
+                return 0;
+            }
+        } else {
+            if (num[i - 1] === '0') {
+                dp[i] = dp[i - 1];
+            } else if (Number(num[i -1] + num[i]) <= 26) {
+                dp[i] = dp[i - 1] + dp[i - 2];
+            } else {
+                dp[i] = dp[i - 1];
+            }
+        }
+    }
+    // console.log(dp)
+    return dp[n - 1];
+};
+
+let num = 120258;
+console.log(translateNum(num));
+```
+
+
+
+-----
+
+## **BM70** **兑换零钱(一)**
+
+给你一个整数数组 coins ，表示不同面额的硬币；以及一个整数 amount ，表示总金额。
+
+计算并返回可以凑成总金额所需的 最少的硬币个数 。如果没有任何一种硬币组合能组成总金额，返回 -1 。
+
+你可以认为每种硬币的数量是无限的。
+
+#### 动态规划
+
+将问题转化为背包问题解决。
+
+因为每种硬币可以使用无数次，所以可以转化为完全背包问题。
+
+确定dp数组的定义。dp[i]表示凑成总金额i的硬币个数。
+
+确定递推公式。得到dp[j]就只有当前总金额j减去当前硬币面额coins[i]的硬币数dp[j - coins[i]]，再加1表示用上coins[i]。dp[j]就要在dp[j - coins[i]] + 1中选一个最小的，所以递推公式为min(dp[j - coins[i]] + 1, dp[j])。
+
+确定初始化方式。因为要找最小值，所以除dp[0]初始化为0以外，其余初始化为最大值。
+
+确定遍历方式。因为与硬币排列方式无关，所以可以选择先遍历硬币，再遍历背包。且因为是完全背包，每种硬币可以使用无数次，所以内层循环为正序。
+
+```js
+/**
+ * @param {number[]} coins
+ * @param {number} amount
+ * @return {number}
+ */
+var coinChange = function(coins, amount) {
+	if (amount === 0) {
+		return 0;
+	}
+	const dp = new Array(amount + 1).fill(Infinity);
+	dp[0] = 0;
+	const n = coins.length;
+	for (let i = 0; i < coins.length; i++) {
+		for (let j = coins[i]; j <= amount; j++) {
+			dp[j] = Math.min(dp[j - coins[i]] + 1, dp[j]);
+		}
+	}
+
+	return dp[amount] === Infinity ? -1 : dp[amount];
+}
+```
+
+复杂度分析
+
+时间复杂度：O(Sn)O(Sn)，其中 SS 是金额，nn 是面额数。我们一共需要计算 O(S)O(S) 个状态，SS 为题目所给的总金额。对于每个状态，每次需要枚举 nn 个面额来转移状态，所以一共需要 O(Sn)O(Sn) 的时间复杂度。
+空间复杂度：O(S)O(S)。数组 \textit{dp}dp 需要开长度为总金额 SS 的空间。
+
